--- a/src/ABSWorlds/Views/MainWindow.axaml
+++ b/src/ABSWorlds/Views/MainWindow.axaml
@@ -1,20 +1,47 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:ABSWorlds.ViewModels"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="ABSWorlds.Views.MainWindow"
-        x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="ABSWorlds">
+<Window xmlns = "https://github.com/avaloniaui"
+        xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm = "using:ABSWorlds.ViewModels"
+        xmlns:controls = "using:ABSWorlds.Controls"
+        xmlns:pages = "using:ABSWorlds.Pages"
+        xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views = "clr-namespace:ABSWorlds.Views"
+        mc:Ignorable = "d"
+        d:DesignWidth = "800"
+        d:DesignHeight = "450"
+        x:Class = "ABSWorlds.Views.MainWindow"
+        x:DataType = "vm:MainWindowViewModel"
+        x:Name="MainWindowRoot"
+        Icon = "/Assets/avalonia-logo.ico"
+        Title = "Энциклопедия миров братьев Стругацких" >
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
+        <vm:MainWindowViewModel />
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+    <Panel>
+        <Panel Margin="{Binding #MainWindowRoot.OffScreenMargin}" >
+            <views:MainView Margin="{Binding #MainWindowRoot.WindowDecorationMargin}" />
+        </Panel>
+        <Border IsVisible="{Binding ExtendClientAreaEnabled}"
+                BorderThickness="1 1 1 0"
+                CornerRadius="4 4 0 0"
+                BorderBrush="#55000000"
+                Height="22"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Left"
+                Margin="250 8 0 0" >
+            <Border.Background>
+                <SolidColorBrush Color="White"
+                                 Opacity="0.7"/>
+            </Border.Background>
+            <TextBlock Margin="5 5 5 0"
+                       Text="Content In Title Bar" />
+        </Border>
+    </Panel>
+        
+    <!--
+     > -->
 </Window>
