Before transfer projects

--- a/src/ABSWorlds/Views/MainView.axaml
+++ b/src/ABSWorlds/Views/MainView.axaml
@@ -1,39 +1,33 @@
-﻿<UserControl xmlns = "https://github.com/avaloniaui"
-             xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:models="using:ABSWorlds.Models"
+﻿<UserControl xmlns="https://github.com/avaloniaui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:models="using:ABSWorlds.Common.Models"
              xmlns:pages="using:ABSWorlds.Pages"
              xmlns:viewModels="using:ABSWorlds.ViewModels"
-             xmlns:controls = "clr-namespace:ABSWorlds.Controls"
-             mc:Ignorable = "d"
-             d:DesignWidth = "800"
-             d:DesignHeight = "450"
-             x:Class = "ABSWorlds.Views.MainView"
+             xmlns:controls="clr-namespace:ABSWorlds.Controls"
+             mc:Ignorable="d"
+             d:DesignWidth="800"
+             d:DesignHeight="450"
+             x:Class="ABSWorlds.Views.MainView"
              x:DataType="viewModels:MainWindowViewModel">
-    <Grid RowDefinitions = "Auto, *, Auto"
-          Name = "Root" >
-        <Menu>
-            <MenuItem Header = "_Файл" >
-                <MenuItem Header = "_Закрыть" />
-            </MenuItem>
-            <MenuItem Header = "_Вид" />
-            <MenuItem Header = "_Сервис" />
-            <MenuItem Header = "_?" />
-        </Menu>
-        <controls:HamburgerMenu Grid.Row = "1"
+    <Grid RowDefinitions="*"
+          Name="Root">
+        <controls:HamburgerMenu Grid.Row="0"
                                 Name="Sidebar">
-            <TabItem Header = "Энциклопедия" >
-                <pages:Encyclopedia />
+            <TabItem Header="Энциклопедия">
+                <pages:Encyclopedia/>
             </TabItem>
-            <TabItem Header = "Библиография" />
-            <TabItem Header = "Произведения" />
-            <TabItem Header = "Статьи" />
-            <TabItem Header = "Цитаты" />
-            <TabItem Header = "Хронология мира Полудня" />
+            <TabItem Header="Библиография"/>
+            <TabItem Header="Произведения"/>
+            <TabItem Header="Хронология мира Полудня"/>
+            <TabItem Header="Статьи"/>
+            <TabItem Header="Комментарии к пройденному"/>
+            <TabItem Header="Приложения"/>
+            <TabItem Header="Цитаты"/>
+            <TabItem Header="Поиск"/>
+            <TabItem Header="Закладки"/>
+            <TabItem Header="Настройки"/>
         </controls:HamburgerMenu>
-        <Panel Grid.Row = "2" >
-            <TextBlock>Просто текст</TextBlock>
-        </Panel>
     </Grid>
 </UserControl>
